syntax = "proto3";
package demo;
option csharp_namespace = "WebApi";

service DemoProto {
  rpc Test (Request) returns (Reply);
  rpc ExceptionTest (Request) returns (Reply);
  rpc OutTimeTest (Request) returns (Reply);
  rpc OutTimeTest2 (Request) returns (Reply);
}

message Request {
  string name = 1;
}

message Reply {
  string message = 1;
}
